--- a/README
+++ b/README
@@ -6,7 +6,7 @@ License: MIT License
 
 Version: 0.3
 
-Many changes have been made before this has been released as an open source project. 0.3 is the first open source release. Significantly, the system is being split up into components that are packaged using the require.js syntax.
+Many changes have been made before this has been released as an open source project. 0.3 is the first open source release. Significantly, the system is being split up into components that are packaged using the require.js syntax. Recent changes have meant that the number of style properties that can be used - it's currently restricted to margin and border. This will change as the definitions for the properties are added to jsgui-html.
 
 -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~
 
@@ -17,6 +17,10 @@ It operates on both the client and the server. Some code is specialised for one 
 jsgui-lang:
 
 Important features that are used to implement other parts of the library. Functions here avoid code repetition elsewhere in the library. One of the main goals of this module is to enable compact JavaScript code to be written.
+
+Nested data system:
+
+
 
 jsgui-html:
 
